# selfhost-auth

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md
.cargo/: config.toml
.github/workflows/: docker-publish.yml
data/: dev.sqlite3
src/: handlers.rs  main.rs  router.rs  sessions.rs  website.html
src/db/: mod.rs  schema.sql
