[package]
name = "selfhost-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bcrypt = "0.19.0"
dotenv = "0.15.0"
rand = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "derive"] }
tokio = { version = "1.51.1", features = ["rt", "signal"] } 
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
